# snow_legacy

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  readme.md
_install_dep/: install_mac.sh
anime_viewer/: CMakeLists.txt  biwi_obj.cpp  biwi_obj.h  main.cpp  pybind.cpp  window.cpp  window.h
anime_viewer/facedb/: parameter.h  visualize.h
anime_viewer/gui/: glsl.h  window.cpp
bilinear_model/: CMakeLists.txt  main.cpp  test_simd.cpp
bilinear_model/facedb/: bilinear_model.h  facedb.cpp  facedb.h  tensor.h
bilinear_model/faceware/: bilinear_model.cpp  bilinear_model.h  faceware.cpp  faceware.h  parameter.h  show_model.cpp  show_model.h  tensor.cpp  tensor.h
bilinear_model/visualize/: show_model.cpp  show_model.h
biwi_visualizer/: biwi_obj.cpp  biwi_obj.h  main.cpp  window.h
depth_player/: CMakeLists.txt  FFmpeg.cmake  FindFFMpeg.cmake  extend_types.h  main.cpp  math.h  readme.md
depth_player/shader/: image.h
depth_player/video/: ffmpeg_header.h  reader.cpp  reader.h
depth_player/window/: player.cpp  player.h
example/: main.cpp  window.h
examples/: bilateral_filter.py  test_depth.py
examples/anime_viewer/: CMakeLists.txt  __init__.py  main.cpp  pybind.cpp
examples/anime_viewer/facedb/: bilinear_model.cpp  bilinear_model.h  facedb.cpp  facedb.h  facedb.py  tensor.cpp  tensor.h  visualize.cpp
examples/anime_viewer/glsl/: frag.glsl  to_str.py  (+2 more)
examples/bilinear_model/: CMakeLists.txt  main.cpp
examples/bilinear_reconstruct/: CMakeLists.txt  main.cpp
examples/bilinear_reconstruct/depth_source/: data.h
examples/bilinear_reconstruct/depth_source/realsense/: librealsense.cpp  librealsense.h  rsutils.cpp  rsutils.h
examples/bilinear_reconstruct/facedb/: bilinear_model.cpp  bilinear_model.h  facedb.cpp  facedb.h  parameter.h  tensor.cpp  tensor.h
examples/bilinear_reconstruct/shaders/: frag.glsl  image.h  morph_model.h  point_cloud.h
examples/bilinear_reconstruct/solver/: cost_functions_2d.h  frames_solver.cpp  frames_solver.h  functions_2d.h  glm_grad.h  modules.h  video_solver.cpp  video_solver.h
examples/bilinear_reconstruct/tools/: contour.h  distances.h  landmarks.h  math.h  math_tools.h  projection.h
examples/bilinear_reconstruct/visualizer/: shader_image.h  shader_lands.h  shader_model.h  shader_point.h  show.cpp  show.h  window.cpp  window.h
examples/depth_video/: CMakeLists.txt  __init__.py  data.h  main.cpp  process.cpp  process.h  pybind.cpp  test.py
examples/video_player/: CMakeLists.txt  main.cpp
examples/video_player/window/: player.cpp  player.h
glsl/: arc_frag.glsl  arc_vert.glsl  frag_notex.glsl  vert.glsl
glutils/: snow.cpp  snow.h
glutils/core/: math.h
glutils/learnopengl/: model.h
glutils/model/: mesh.cpp  mesh.h  model.cpp  model.h
glutils/shader/: shader.h
glutils/snow/: snow.cpp  snow.h  snow_app.cpp  snow_app.h  snow_imgui.cpp  snow_imgui.h  snow_window.cpp  snow_window.h
libsnow/: CMakeLists.txt  snow-config-debug.cmake  snow-config.cmake  snow-core-config-debug.cmake  snow-core-config.cmake  snow.h
libsnow/core/: CMakeLists.txt  common.h  core.h
libsnow/core/data/: image.cpp
libsnow/core/src/: common.h  image.cpp  image.h  log.h  memory.h  test.cpp  test.h  timer.h
libsnow/core/utils/: image.h  log.cpp  log.h  memory.h
libsnow/include/snow/core/: core.h
libsnow/include/snow/core/src/: memo_allocator.h
libsnow/test/: CMakeLists.txt  main.cpp
project/: CMakeLists.txt
project/snow/core/: CMakeLists.txt  core.cpp  core.h
project/snow/core/src/: common.h  data_image.cpp  data_image.h  tool_log.cpp  tool_timer.h
project/snow/core/src/data/: image.cpp  image.h  wav.cpp  wav.h
project/snow/core/src/math/: vec2.h
project/snow/core/src/memory/: _snow_mem.cpp  allocator.h  arena.h
project/snow/core/src/tools/: log.cpp  log.h  path.h  timer.h
snow/: CMakeLists.txt  CMakeLists_backup.txt  snow.h
snow/cmake_modules/: FFmpeg.cmake  SDL2.cmake  assimp.cmake
snow/core/: extypes.h  math_types.h  snow_camera.h  snow_core.h  snow_filesystem.h  snow_glm.h  snow_image.cpp  snow_image.h  snow_iostream.h  snow_math.h  snow_memory.cpp  snow_memory.h  snow_path.h  snow_shader.h  snow_simd.h  snow_stream.h  snow_string.h  snow_thread.h  snow_watch.h
snow/core/data/: snow_image.cpp  snow_stream.h
snow/core/math/: extypes.h  snow_math.h
snow/core/misc/: snow_simd.h
snow/core/tools/: snow_argparse.h  snow_bar.h  snow_iostream.h  snow_log.cpp  snow_log.h  snow_memory.h  snow_path.h  snow_string.h  snow_watch.h
snow/fonts/: arial.h  fonts.h  ubuntu_l.h  ubuntu_mono.h
snow/gui/: snow_app.cpp  snow_app.h  snow_arcball.cpp  snow_arcball.h  snow_dialog.cpp  snow_dialog.h  snow_dialog.mm  snow_imgui.cpp  snow_imgui.h  snow_shader.h  snow_window.cpp  snow_window.h
snow/libfp/: pipe.h  snow_libfp.h
snow/media/: ffmpeg_functions.cpp  ffmpeg_head.h  snow_media.h  snow_reader.cpp  snow_reader.h  snow_vreader.cpp  snow_vreader.h  snow_wav.cpp  snow_wav.h  snow_writer.cpp  snow_writer.h
snow/media/ffmpeg/: ffmpeg_head.h  snow_reader.cpp  snow_reader.h  snow_writer.cpp  snow_writer.h
snow/model/: snow_mesh.cpp  snow_mesh.h  snow_model.cpp  snow_model.h
snow/opengl/: snow_opengl.h
snow/opengl/gui/: snow_app.cpp  snow_app.h  snow_dialog.cpp  snow_dialog.h  snow_text.cpp  snow_text.h  snow_window.cpp  snow_window.h
snow/opengl/model/: snow_mesh.cpp  snow_mesh.h  snow_model.cpp  snow_model.h
snow/opengl/tools/: snow_arcball.h  snow_shader.h
snow/tools/: common.h  snow_arcball.cpp  snow_arcball.h  snow_camera.cpp  snow_camera.h
src/core/: camera.h
src/model/: model.cpp  model.h
src/snow/: snow.h  snow_app.h  snow_imgui.cpp  snow_imgui.h
test/: CMakeLists.txt  main.cpp  test_fp.cpp  test_image.cpp  test_memory.cpp  test_parse.cpp  test_simd.cpp  test_typerich.cpp  test_wav.cpp
test_libsnow/: CMakeLists.txt  test_mem.cpp
v0.1/: .gitignore  .gitmodules  README.md
v0.1/3dmodel/: process.py  triangles.txt
v0.1/_install_dep/: install_ubuntu.sh  install_win.md
v0.1/snow/: CMakeLists.txt  snow.h
v0.1/test/: test_parse.cpp  test_swr.cpp  test_typerich.cpp  test_wav.cpp
(+65 files in other folders)
