cmake_minimum_required(VERSION 3.0.2)
set(CMAKE_CXX_STANDARD 11)

project(snow_test)
# snow
set(SNOW_AVX            on  CACHE BOOL "enable avx"       FORCE)
set(SNOW_RELEASE        off CACHE BOOL "enable release"   FORCE)
set(SNOW_MODULE_OPENGL  on  CACHE BOOL "enable opengl"    FORCE)
set(SNOW_MODULE_FFMPEG  on  CACHE BOOL "enable ffmpeg"    FORCE)
set(SNOW_MODULE_FP      on  CACHE BOOL "enable fp"        FORCE)
add_subdirectory(../snow ext/snow/)
add_definitions(    ${SNOW_DEFINITIONS})
include_directories(${SNOW_INCLUDE_DIRS})
link_directories(   ${SNOW_LIBRARIES_DIRS})

add_executable(test_simd   test_simd.cpp)
add_executable(test_memory test_memory.cpp)
add_executable(test_fp     test_fp.cpp)
add_executable(test_wav    test_wav.cpp)
add_executable(test_swr    test_swr.cpp)
add_executable(test_image  test_image.cpp)
add_executable(test_parse  test_parse.cpp)
add_executable(test_typerich  test_typerich.cpp ../libsnow/core/utils/log.cpp)
target_link_libraries(test_simd   snow)
target_link_libraries(test_memory snow)
target_link_libraries(test_fp     snow)
target_link_libraries(test_wav    snow)
target_link_libraries(test_swr    snow)
target_link_libraries(test_image  snow)
target_link_libraries(test_parse  snow)
target_link_libraries(test_typerich pthread)

if (WIN32)
    SNOW_COPY_DLL(${PROJECT_NAME})
endif (WIN32)
