CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
SET(CMAKE_CXX_STANDARD 11)

# set sources of core module
FILE(GLOB_RECURSE SNOW_CORE_HEADERS *.h *.hpp)
FILE(GLOB_RECURSE SNOW_CORE_SOURCES *.cpp)

ADD_LIBRARY(snow_core SHARED ${SNOW_CORE_HEADERS} ${SNOW_CORE_SOURCES})
# set_target_properties(snow_core PROPERTIES)

INSTALL(TARGETS snow_core LIBRARY
        DESTINATION "${SNOW_OUTPUT_LIB}")
INSTALL(DIRECTORY .
        DESTINATION "${SNOW_OUTPUT_INC}/core"
        FILES_MATCHING
            PATTERN "*.h"
            PATTERN "*.hpp"
            PATTERN "LICENSE")
